Update&Fixing the navbar on small screens style

--- a/components/Layout/MainNavigation/NavOnSmallScreens.module.css
+++ b/components/Layout/MainNavigation/NavOnSmallScreens.module.css
@@ -1,7 +1,7 @@
 .nav {
 	width: 100%;
 	height: 100%;
-	display: flex;
+	display: none;
 	justify-content: space-between;
 	align-items: center;
 	padding: 0.25em 0.5em;
@@ -28,9 +28,9 @@
 	margin-left: auto;
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (max-width: 700px) {
 	.nav {
-		display: none;
+		display: flex;
 	}
 }
 
